--- a/configs/astro.yaml
+++ b/configs/astro.yaml
@@ -13,7 +13,22 @@ astro:
   daily_time_utc: "00:00:00"
 
   # Coordinate center: "geo" (geocentric) or "helio" (heliocentric)
-  center: "helio"
+  center: "geo"
+
+  # If true, compute BOTH geo and helio features and merge them.
+  include_both_centers: true
+
+  # Aspect orb multiplier (default 1.0)
+  orb_multiplier: 1.0
+
+  # Default orb grid list for orb search (override via CLI)
+  orb_grid: [0.5, 0.8, 1.0, 1.2, 1.4]
+
+  # Feature toggles
+  # - include_pair_aspects: aspects between transit bodies (default True)
+  # - include_transit_aspects: transit->natal aspects (default False)
+  include_pair_aspects: true
+  include_transit_aspects: false
 
   # Houses are not used in MVP
   enable_houses: false
