--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -5,3 +5,35 @@ training:
   # 1) MOVE vs NO_MOVE
   # 2) UP vs DOWN (only for MOVE)
   two_stage: true
+
+  # Hyperparameter tuning (RandomizedSearchCV + TimeSeriesSplit)
+  tune_enabled: true
+  tune_n_iter: 25
+  tune_cv_splits: 5
+  tune_scoring: "f1_macro"
+  tune_verbose_per_fold: true
+  tune_show_accuracy: true
+  tune_use_small: true
+
+  # Parameter search space (override if needed)
+  tune_param_dist_small:
+    n_estimators: [200, 400]
+    learning_rate: [0.01, 0.05]
+    max_depth: [3, 6]
+    min_child_weight: [1, 3]
+    gamma: [0, 0.1]
+    subsample: [0.8, 1.0]
+    colsample_bytree: [0.8, 1.0]
+    reg_alpha: [0, 0.1]
+    reg_lambda: [0.1, 1.0]
+
+  tune_param_dist_full:
+    n_estimators: [200, 400, 800]
+    learning_rate: [0.01, 0.03, 0.05, 0.1]
+    max_depth: [3, 5, 7, 9]
+    min_child_weight: [1, 3, 5]
+    gamma: [0, 0.1, 0.3]
+    subsample: [0.7, 0.8, 0.9, 1.0]
+    colsample_bytree: [0.7, 0.8, 0.9, 1.0]
+    reg_alpha: [0, 0.01, 0.1]
+    reg_lambda: [0, 0.1, 1.0]
