--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Игнорируем системные и временные файлы IDE/редакторов
 .idea/
 .vscode/
+.ai/
+rules.md
+.agent/
 
 # Игнорируем локальные виртуальные окружения
 .venv/
